--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,12 @@
   <meta charset="UTF-8">
   <title>Snazzy Paws Grooming</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/stylesheet.min.css">
+  <meta name="description" content="Contact Snazzy Paws Grooming in Christchurch for enquiries, location details, and frequently asked questions. We're here to help you and your pet.">
+  <!-- Bootstrap CSS-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Custom Styles -->
+  <link rel="stylesheet" href="css/stylesheet.css">
+  <!-- Fonts & Icons -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
@@ -13,93 +18,77 @@
 <body>
   <!-- Header -->
   <header class="header">
-    <div class="row header-row">
-      <div class="col-6 col-md-3 header-logo">
-        <a href="index.html" aria-label="Snazzy Paws Grooming Home">SNAZZY PAWS GROOMING</a>
-      </div>
-      <nav class="col-md-6 desktop-nav" aria-label="Main navigation">
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
-          <li><a class="active" href="contact.html" aria-current="page">Contact</a></li>
-        </ul>
-      </nav>
-      <div class="col-4 col-md-3 header-end">
-        <span class="opening-times" aria-label="Opening Hours">Opening Hours:<br> 9:00–5:00</span>
-      </div>
-      <div class="col-2 header-hamburger">
-        <button id="hamburger" aria-label="Open navigation menu" aria-controls="mobile-nav" aria-expanded="false">
-          <span class="hamburger-bar"></span>
-          <span class="hamburger-bar"></span>
-          <span class="hamburger-bar"></span>
+    <nav class="navbar navbar-expand-md navbar-dark">
+      <div class="container-fluid">
+        <a class="header-logo navbar-brand" href="index.html" aria-label="Snazzy Paws Grooming Home">SNAZZY PAWS<br> GROOMING</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
-      </div>
-    </div>
-    <nav id="mobile-nav" class="mobile-nav" aria-label="Mobile main navigation" hidden>
-      <div class="mobile-nav-header">
-        <div class="header-logo">
-          <span>SNAZZY PAWS GROOMING</span>
+        <div class="collapse navbar-collapse" id="mainNavbar">
+          <ul class="navbar-nav mx-auto mb-2 mb-md-0 ">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="services.html">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="gallery.html">Gallery</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="contact.html" aria-current="page">Contact</a>
+            </li>
+          </ul>
+          <span class="d-none d-md-block ms-auto" aria-label="Opening Hours">Opening Hours:<br> 9:00–5:00</span>
         </div>
-        <button id="close-nav" class="close-nav" aria-label="Close navigation menu" aria-controls="mobile-nav">&times;</button>
-      </div>
-      <ul class="col-12">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a class="active" href="contact.html" aria-current="page">Contact</a></li>
-      </ul>
-      <div class="mobile-nav-footer">
-        <span class="opening-times" aria-label="Opening Hours">Opening Hours: 9:00AM – 5:00PM</span>
+        <span class=" d-block d-md-none ms-auto" aria-label="Opening Hours" >Opening Hours:<br> 9:00–5:00</span>
       </div>
     </nav>
   </header>
-  <script src="js/header.js"></script>
 
   <!-- Main Content -->
   <main>
-    <section class="enquiry-section container">
+    <section class="p-4 container">
       <div class="row">
-        <!-- Form -->
         <div class="col-12 col-md-6 enquiry-form-col">
           <form class="enquiry-form" aria-label="Enquiry form">
             <h2>ENQUIRY FORM</h2>
-            <div class="form-row">
-              <div class="form-group">
+            <div class="row form-row">
+              <div class="col-12 col-md-6 form-group">
                 <label for="firstname">First Name <span aria-hidden="true">*</span></label>
-                <input type="text" id="firstname" name="firstname" required aria-required="true" autocomplete="given-name">
+                <input type="text" id="firstname" name="firstname" required aria-required="true" class="form-control">
               </div>
-              <div class="form-group">
+              <div class="col-12 col-md-6 form-group">
                 <label for="lastname">Last Name <span aria-hidden="true">*</span></label>
-                <input type="text" id="lastname" name="lastname" required aria-required="true" autocomplete="family-name">
+                <input type="text" id="lastname" name="lastname" required aria-required="true" class="form-control">
               </div>
             </div>
-            <div class="form-row">
-              <div class="form-group full-width">
+            <div class="row form-row">
+              <div class="col-12 form-group full-width">
                 <label for="email">Email Address <span aria-hidden="true">*</span></label>
-                <input type="email" id="email" name="email" required aria-required="true" autocomplete="email">
+                <input type="email" id="email" name="email" required aria-required="true" class="form-control">
               </div>
             </div>
-            <div class="form-row">
-              <div class="form-group full-width">
+            <div class="row form-row">
+              <div class="col-12 form-group full-width">
                 <label for="mobile">Mobile Number <span aria-hidden="true">*</span></label>
-                <input type="tel" id="mobile" name="mobile" required aria-required="true" autocomplete="tel">
+                <input type="tel" id="mobile" name="mobile" required aria-required="true" class="form-control">
               </div>
             </div>
             <h3 class="enquiry-heading">YOUR ENQUIRY</h3>
-            <div class="form-row">
-              <div class="form-group full-width">
+            <div class="row form-row">
+              <div class="col-12 form-group full-width">
                 <label for="enquiry">Message <span aria-hidden="true">*</span></label>
-                <textarea id="enquiry" name="enquiry" rows="4" required aria-required="true"></textarea>
+                <textarea id="enquiry" name="enquiry" rows="4" required aria-required="true" class="form-control"></textarea>
               </div>
             </div>
-            <button type="submit" class="btn" aria-label="Submit enquiry">Submit Enquiry</button>
+            <button type="submit" class="bttn w-100 mt-3" aria-label="Submit enquiry">Submit Enquiry</button>
           </form>
         </div>
         <!-- MAP & Contact info-->
         <div class="col-12 col-md-6 location-col">
           <h2 class="location-heading">WHERE TO FIND US</h2>
-          <div class="map-container">
+          <div class="map-container mb-3">
             <iframe
               src="https://www.google.com/maps?q=5+Papanui+Road,+Christchurch,+New+Zealand&output=embed"
               style="border:0;" allowfullscreen="" loading="lazy"
@@ -107,16 +96,16 @@
               title="Map showing location of Snazzy Paws Grooming, 5 Papanui Road, Christchurch, New Zealand">
             </iframe>
           </div>
-          <div class="contact-location-box">
-            <div class="contact-info">
+          <div class="contact-location-box d-flex flex-wrap">
+            <div class="contact-info flex-fill">
               <h4>CONTACT US</h4>
-              <ul>
+              <ul class="list-unstyled">
                 <li>Email: <a href="mailto:info@snazzypaws.co.nz">info@snazzypaws.co.nz</a></li>
                 <li>Phone: <a href="tel:+6431234567">03 123 4567</a></li>
                 <li>Freephone: <a href="tel:0800123456">0800 123 456</a></li>
               </ul>
             </div>
-            <div class="location-info">
+            <div class="location-info flex-fill">
               <h4>OUR LOCATION</h4>
               <address>
                 5 Papanui Road<br>
@@ -129,53 +118,96 @@
       </div>
     </section>
     <!-- FAQ-->
-    <section class="faq-section container">
+    <section class="my-5 container">
       <h2 class="faq-heading">Frequently Asked Questions</h2>
-      <div class="faq-list" aria-label="Frequently Asked Questions">
-        <div class="faq-item">
-          <h3 class="faq-question">How do I book a grooming appointment?</h3>
-          <div class="faq-answer">
-            <p>You can book online through our <a href="booking.html">booking page</a>, call us, or visit us in person during opening hours.</p>
+      <div class="accordion accordion-flush" id="faqAccordion" aria-label="Frequently Asked Questions">
+        <div class="accordion-item">
+          <h3 class="accordion-header" id="faq1-heading">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#faq1" aria-expanded="true" aria-controls="faq1">
+              How do I book a grooming appointment?
+            </button>
+          </h3>
+          <div id="faq1" class="accordion-collapse collapse show" aria-labelledby="faq1-heading" data-bs-parent="#faqAccordion">
+            <div class="accordion-body">
+              <p>You can book online through our <a href="booking.html">booking page</a>, call us, or visit us in person during opening hours.</p>
+            </div>
           </div>
         </div>
-        <div class="faq-item">
-          <h3 class="faq-question">What vaccinations are required?</h3>
-          <div class="faq-answer">
-            <p>We require all dogs to be up-to-date with their core vaccinations, including parvovirus, distemper, and kennel cough. Please bring proof of vaccination to your first appointment.</p>
+        <div class="accordion-item">
+          <h3 class="accordion-header faq-question" id="faq2-heading">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq2" aria-expanded="false" aria-controls="faq2">
+              What vaccinations are required?
+            </button>
+          </h3>
+          <div id="faq2" class="accordion-collapse collapse" aria-labelledby="faq2-heading" data-bs-parent="#faqAccordion">
+            <div class="accordion-body">
+              <p>We require all dogs to be up-to-date with their core vaccinations, including parvovirus, distemper, and kennel cough. Please bring proof of vaccination to your first appointment.</p>
+            </div>
           </div>
         </div>
-        <div class="faq-item">
-          <h3 class="faq-question">How long does grooming take?</h3>
-          <div class="faq-answer">
-            <p>Most appointments take between 1–3 hours, depending on the size, breed, and services required. We will give you an estimated pick-up time when you drop off your pet.</p>
+        <div class="accordion-item">
+          <h3 class="accordion-header" id="faq3-heading">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq3" aria-expanded="false" aria-controls="faq3">
+              How long does grooming take?
+            </button>
+          </h3>
+          <div id="faq3" class="accordion-collapse collapse" aria-labelledby="faq3-heading" data-bs-parent="#faqAccordion">
+            <div class="accordion-body">
+              <p>Most appointments take between 1–3 hours, depending on the size, breed, and services required. We will give you an estimated pick-up time when you drop off your pet.</p>
+            </div>
           </div>
         </div>
-        <div class="faq-item">
-          <h3 class="faq-question">Can I stay with my dog during grooming?</h3>
-          <div class="faq-answer">
-            <p>For safety and to help your dog relax, we ask that owners do not stay in the grooming area. You are welcome to wait in our reception area or return at pick-up time.</p>
+        <div class="accordion-item">
+          <h3 class="accordion-header" id="faq4-heading">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq4" aria-expanded="false" aria-controls="faq4">
+              Can I stay with my dog during grooming?
+            </button>
+          </h3>
+          <div id="faq4" class="accordion-collapse collapse" aria-labelledby="faq4-heading" data-bs-parent="#faqAccordion">
+            <div class="accordion-body">
+              <p>For safety and to help your dog relax, we ask that owners do not stay in the grooming area. You are welcome to wait in our reception area or return at pick-up time.</p>
+            </div>
           </div>
         </div>
-        <div class="faq-item">
-          <h3 class="faq-question">Do you groom puppies and senior dogs?</h3>
-          <div class="faq-answer">
-            <p>Yes! We offer special packages for both puppies and senior dogs, with extra care and gentle handling.</p>
+        <div class="accordion-item">
+          <h3 class="accordion-header" id="faq5-heading">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq5" aria-expanded="false" aria-controls="faq5">
+              Do you groom puppies and senior dogs?
+            </button>
+          </h3>
+          <div id="faq5" class="accordion-collapse collapse" aria-labelledby="faq5-heading" data-bs-parent="#faqAccordion">
+            <div class="accordion-body">
+              <p>Yes! We offer special packages for both puppies and senior dogs, with extra care and gentle handling.</p>
+            </div>
           </div>
         </div>
-        <div class="faq-item">
-          <h3 class="faq-question">What if my dog has special needs or anxiety?</h3>
-          <div class="faq-answer">
-            <p>Please let us know in advance about any special needs, medical conditions, or anxiety. We will do our best to accommodate and make the experience as comfortable as possible.</p>
+        <div class="accordion-item">
+          <h3 class="accordion-header" id="faq6-heading">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq6" aria-expanded="false" aria-controls="faq6">
+              What if my dog has special needs or anxiety?
+            </button>
+          </h3>
+          <div id="faq6" class="accordion-collapse collapse" aria-labelledby="faq6-heading" data-bs-parent="#faqAccordion">
+            <div class="accordion-body">
+              <p>Please let us know in advance about any special needs, medical conditions, or anxiety. We will do our best to accommodate and make the experience as comfortable as possible.</p>
+            </div>
           </div>
         </div>
-        <div class="faq-item">
-          <h3 class="faq-question">What payment methods do you accept?</h3>
-          <div class="faq-answer">
-            <p>We accept cash, EFTPOS, and all major credit cards.</p>
+        <div class="accordion-item">
+          <h3 class="accordion-header" id="faq7-heading">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq7" aria-expanded="false" aria-controls="faq7">
+              What payment methods do you accept?
+            </button>
+          </h3>
+          <div id="faq7" class="accordion-collapse collapse" aria-labelledby="faq7-heading" data-bs-parent="#faqAccordion">
+            <div class="accordion-body">
+              <p>We accept cash, EFTPOS, and all major credit cards.</p>
+            </div>
           </div>
         </div>
       </div>
     </section>
+
   </main>
   <!-- Footer -->
   <footer class="site-footer">
@@ -184,11 +216,13 @@
         <div class="col-12 col-md-6 footer-col footer-col-left">
           <div class="footer-sitemap">
             <h2>SITEMAP</h2>
-            <ul>
+            <ul class="list-unstyled">
               <li><a href="index.html">Home</a></li>
               <li><a href="services.html">Services</a></li>
               <li><a href="gallery.html">Gallery</a></li>
-              <li><a class="active" href="contact.html" aria-current="page">Contact Us</a></li>
+              <li><a  class="active" href="contact.html" aria-current="page">Contact Us</a></li>
+              <li><a href="privacy-policy.html">Privacy Policy</a></li>
+              <li><a href="roster.html">Roster</a></li>
             </ul>
           </div>
           <div class="footer-contact">
@@ -200,7 +234,7 @@
           </div>
         </div>
         <div class="col-12 col-md-6 footer-col footer-col-right">
-          <div class="footer-map">
+          <div class="footer-map mb-3">
             <iframe
               src="https://www.google.com/maps?q=5+Papanui+Road,+Christchurch,+New+Zealand&output=embed"
               style="border:0;"
@@ -228,5 +262,8 @@
       </div>
     </div>
   </footer>
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
