--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,12 @@
   <meta charset="UTF-8">
   <title>Snazzy Paws Grooming</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/stylesheet.min.css">
+  <meta name="description" content="Browse the Snazzy Paws Grooming gallery to see our happy canine clients after their grooming sessions. See the difference our team makes!">
+  <!-- Bootstrap CSS-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Custom Styles -->
+  <link rel="stylesheet" href="css/stylesheet.css">
+  <!-- Fonts & Icons -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
@@ -13,65 +18,49 @@
 <body>
   <!-- Header -->
   <header class="header">
-    <div class="row header-row">
-      <div class="col-6 col-md-3 header-logo">
-        <a href="index.html" aria-label="Snazzy Paws Grooming Home">SNAZZY PAWS GROOMING</a>
-      </div>
-      <nav class="col-md-6 desktop-nav" aria-label="Main navigation">
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a class="active" href="gallery.html" aria-current="page">Gallery</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-      <div class="col-4 col-md-3 header-end">
-        <span class="opening-times" aria-label="Opening Hours">Opening Hours:<br> 9:00–5:00</span>
-      </div>
-      <div class="col-2 header-hamburger">
-        <button id="hamburger" aria-label="Open navigation menu" aria-controls="mobile-nav" aria-expanded="false">
-          <span class="hamburger-bar"></span>
-          <span class="hamburger-bar"></span>
-          <span class="hamburger-bar"></span>
+    <nav class="navbar navbar-expand-md navbar-dark">
+      <div class="container-fluid">
+        <a class="header-logo navbar-brand" href="index.html" aria-label="Snazzy Paws Grooming Home">SNAZZY PAWS<br> GROOMING</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
-      </div>
-    </div>
-    <nav id="mobile-nav" class="mobile-nav" aria-label="Mobile main navigation" hidden>
-      <div class="mobile-nav-header">
-        <div class="header-logo">
-          <span>SNAZZY PAWS GROOMING</span>
+        <div class="collapse navbar-collapse" id="mainNavbar">
+          <ul class="navbar-nav mx-auto mb-2 mb-md-0 ">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="services.html">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="gallery.html"  aria-current="page">Gallery</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+          <span class="d-none d-md-block ms-auto" aria-label="Opening Hours">Opening Hours:<br> 9:00–5:00</span>
         </div>
-        <button id="close-nav" class="close-nav" aria-label="Close navigation menu" aria-controls="mobile-nav">&times;</button>
-      </div>
-      <ul class="col-12">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a class="active" href="gallery.html" aria-current="page">Gallery</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-      <div class="mobile-nav-footer">
-        <span class="opening-times" aria-label="Opening Hours">Opening Hours: 9:00AM – 5:00PM</span>
+        <span class=" d-block d-md-none ms-auto" aria-label="Opening Hours" >Opening Hours:<br> 9:00–5:00</span>
       </div>
     </nav>
   </header>
-  <script src="js/header.js"></script>
-
   <!-- Main Content -->
   <main>
     <section class="gallery-section">
       <div class="container">
-        <div class="gallery-header">
+        <div class="gallery-header mb-4">
           <h1>Meet our clients</h1>
           <p>Our furry friends leave looking and feeling their best! Browse some of our recent clients and see the Snazzy Paws difference.</p>
         </div>
-        <div class="gallery-categories" role="group" aria-label="Gallery filter categories">
-          <button class="gallery-category-btn active" data-category="all" aria-pressed="true" aria-label="Show all categories">All</button>
-          <button class="gallery-category-btn" data-category="full-groom" aria-pressed="false" aria-label="Show Full Groom">Full Groom</button>
-          <button class="gallery-category-btn" data-category="wash-dry" aria-pressed="false" aria-label="Show Wash and Dry">Wash & Dry</button>
+        <div class="gallery-categories d-flex justify-content-center gap-2 mb-4" role="group" aria-label="Gallery filter categories">
+          <button class="gallery-category-bttn active" data-category="all" aria-pressed="true" aria-label="Show all categories">All</button>
+          <button class="gallery-category-bttn" data-category="full-groom" aria-pressed="false" aria-label="Show Full Groom">Full Groom</button>
+          <button class="gallery-category-bttn" data-category="wash-dry" aria-pressed="false" aria-label="Show Wash and Dry">Wash & Dry</button>
         </div>
-        <div class="gallery-grid" aria-label="Gallery of recent clients">
-          <div class="gallery-item" data-category="wash-dry">
-            <a href="booking.html" class="gallery-link">
+        <div class="row g-3" aria-label="Gallery of recent clients">
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 gallery-item" data-category="wash-dry">
+            <a href="booking.html" class="gallery-link d-block h-100">
               <div class="gallery-img-wrapper">
                 <img src="img/dog1.jpg" alt="Max after Bath and Brush at Snazzy Paws Grooming">
                 <div class="gallery-overlay">
@@ -83,8 +72,8 @@
               </div>
             </a>
           </div>
-          <div class="gallery-item" data-category="full-groom">
-            <a href="booking.html" class="gallery-link">
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 gallery-item" data-category="full-groom">
+            <a href="booking.html" class="gallery-link d-block h-100">
               <div class="gallery-img-wrapper">
                 <img src="img/dog2.jpg" alt="Luna after Haircut at Snazzy Paws Grooming">
                 <div class="gallery-overlay">
@@ -96,8 +85,8 @@
               </div>
             </a>
           </div>
-          <div class="gallery-item" data-category="puppy-package">
-            <a href="booking.html" class="gallery-link">
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 gallery-item" data-category="puppy-package">
+            <a href="booking.html" class="gallery-link d-block h-100">
               <div class="gallery-img-wrapper">
                 <img src="img/dog15.jpg" alt="Finn after Puppy Package at Snazzy Paws Grooming">
                 <div class="gallery-overlay">
@@ -109,8 +98,8 @@
               </div>
             </a>
           </div>
-          <div class="gallery-item" data-category="teeth-brushing">
-            <a href="booking.html" class="gallery-link">
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 gallery-item" data-category="teeth-brushing">
+            <a href="booking.html" class="gallery-link d-block h-100">
               <div class="gallery-img-wrapper">
                 <img src="img/dog16.jpg" alt="Hazel after Teeth Brushing at Snazzy Paws Grooming">
                 <div class="gallery-overlay">
@@ -122,8 +111,8 @@
               </div>
             </a>
           </div>
-          <div class="gallery-item" data-category="nail-trim">
-            <a href="booking.html" class="gallery-link">
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 gallery-item" data-category="nail-trim">
+            <a href="booking.html" class="gallery-link d-block h-100">
               <div class="gallery-img-wrapper">
                 <img src="img/dog3.jpg" alt="Charlie after Nail Trim at Snazzy Paws Grooming">
                 <div class="gallery-overlay">
@@ -135,8 +124,8 @@
               </div>
             </a>
           </div>
-          <div class="gallery-item" data-category="ear-cleaning">
-            <a href="booking.html" class="gallery-link">
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 gallery-item" data-category="ear-cleaning">
+            <a href="booking.html" class="gallery-link d-block h-100">
               <div class="gallery-img-wrapper">
                 <img src="img/dog4.jpg" alt="Ruby after Ear Cleaning at Snazzy Paws Grooming">
                 <div class="gallery-overlay">
@@ -148,8 +137,8 @@
               </div>
             </a>
           </div>
-          <div class="gallery-item" data-category="teeth-brushing">
-            <a href="booking.html" class="gallery-link">
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 gallery-item" data-category="teeth-brushing">
+            <a href="booking.html" class="gallery-link d-block h-100">
               <div class="gallery-img-wrapper">
                 <img src="img/dog5.jpg" alt="Milo after Teeth Brushing at Snazzy Paws Grooming">
                 <div class="gallery-overlay">
@@ -161,8 +150,8 @@
               </div>
             </a>
           </div>
-          <div class="gallery-item" data-category="de-shedding">
-            <a href="booking.html" class="gallery-link">
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 gallery-item" data-category="de-shedding">
+            <a href="booking.html" class="gallery-link d-block h-100">
               <div class="gallery-img-wrapper">
                 <img src="img/dog6.jpg" alt="Bailey after De-shedding Treatment at Snazzy Paws Grooming">
                 <div class="gallery-overlay">
@@ -174,8 +163,8 @@
               </div>
             </a>
           </div>
-          <div class="gallery-item" data-category="flea-tick">
-            <a href="booking.html" class="gallery-link">
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 gallery-item" data-category="flea-tick">
+            <a href="booking.html" class="gallery-link d-block h-100">
               <div class="gallery-img-wrapper">
                 <img src="img/dog7.jpg" alt="Daisy after Flea and Tick Treatment at Snazzy Paws Grooming">
                 <div class="gallery-overlay">
@@ -187,8 +176,8 @@
               </div>
             </a>
           </div>
-          <div class="gallery-item" data-category="spa">
-            <a href="booking.html" class="gallery-link">
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 gallery-item" data-category="spa">
+            <a href="booking.html" class="gallery-link d-block h-100">
               <div class="gallery-img-wrapper">
                 <img src="img/dog8.jpg" alt="Cooper after Spa Package at Snazzy Paws Grooming">
                 <div class="gallery-overlay">
@@ -200,8 +189,8 @@
               </div>
             </a>
           </div>
-          <div class="gallery-item" data-category="express">
-            <a href="booking.html" class="gallery-link">
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 gallery-item" data-category="express">
+            <a href="booking.html" class="gallery-link d-block h-100">
               <div class="gallery-img-wrapper">
                 <img src="img/dog9.jpg" alt="Rosie after Express Service at Snazzy Paws Grooming">
                 <div class="gallery-overlay">
@@ -213,8 +202,8 @@
               </div>
             </a>
           </div>
-          <div class="gallery-item" data-category="medicated-bath">
-            <a href="booking.html" class="gallery-link">
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 gallery-item" data-category="medicated-bath">
+            <a href="booking.html" class="gallery-link d-block h-100">
               <div class="gallery-img-wrapper">
                 <img src="img/dog10.jpg" alt="Archie after Medicated Bath at Snazzy Paws Grooming">
                 <div class="gallery-overlay">
@@ -226,8 +215,8 @@
               </div>
             </a>
           </div>
-          <div class="gallery-item" data-category="special-breed">
-            <a href="booking.html" class="gallery-link">
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 gallery-item" data-category="special-breed">
+            <a href="booking.html" class="gallery-link d-block h-100">
               <div class="gallery-img-wrapper">
                 <img src="img/dog11.jpg" alt="Maggie after Special-breed Cuts at Snazzy Paws Grooming">
                 <div class="gallery-overlay">
@@ -239,8 +228,8 @@
               </div>
             </a>
           </div>
-          <div class="gallery-item" data-category="puppy-package">
-            <a href="booking.html" class="gallery-link">
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 gallery-item" data-category="puppy-package">
+            <a href="booking.html" class="gallery-link d-block h-100">
               <div class="gallery-img-wrapper">
                 <img src="img/dog12.jpg" alt="Teddy after Puppy Package at Snazzy Paws Grooming">
                 <div class="gallery-overlay">
@@ -252,8 +241,8 @@
               </div>
             </a>
           </div>
-          <div class="gallery-item" data-category="senior-dog">
-            <a href="booking.html" class="gallery-link">
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 gallery-item" data-category="senior-dog">
+            <a href="booking.html" class="gallery-link d-block h-100">
               <div class="gallery-img-wrapper">
                 <img src="img/dog13.jpg" alt="Oscar after Senior Dog Package at Snazzy Paws Grooming">
                 <div class="gallery-overlay">
@@ -265,8 +254,8 @@
               </div>
             </a>
           </div>
-          <div class="gallery-item" data-category="full-grooming-package">
-            <a href="booking.html" class="gallery-link">
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 gallery-item" data-category="full-grooming-package">
+            <a href="booking.html" class="gallery-link d-block h-100">
               <div class="gallery-img-wrapper">
                 <img src="img/dog14.jpg" alt="Bella after Full Grooming Package at Snazzy Paws Grooming">
                 <div class="gallery-overlay">
@@ -290,11 +279,13 @@
         <div class="col-12 col-md-6 footer-col footer-col-left">
           <div class="footer-sitemap">
             <h2>SITEMAP</h2>
-            <ul>
+            <ul class="list-unstyled">
               <li><a href="index.html">Home</a></li>
               <li><a href="services.html">Services</a></li>
-              <li><a class="active" href="gallery.html" aria-current="page">Gallery</a></li>
+              <li><a  class="active" href="gallery.html" aria-current="page">Gallery</a></li>
               <li><a href="contact.html">Contact Us</a></li>
+              <li><a href="privacy-policy.html">Privacy Policy</a></li>
+              <li><a href="roster.html">Roster</a></li>
             </ul>
           </div>
           <div class="footer-contact">
@@ -306,7 +297,7 @@
           </div>
         </div>
         <div class="col-12 col-md-6 footer-col footer-col-right">
-          <div class="footer-map">
+          <div class="footer-map mb-3">
             <iframe
               src="https://www.google.com/maps?q=5+Papanui+Road,+Christchurch,+New+Zealand&output=embed"
               style="border:0;"
@@ -334,5 +325,7 @@
       </div>
     </div>
   </footer>
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
